*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.12 ===
* Added support of high-precision oversampling routines to dspu::Oversampler module.
* Updated build scripts.

=== 1.0.11 ===
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.10 ===
* Implemented A, B, C, D and K weightening filters.
* Methods save and save_range of dspu::Sample are marked as const.
* Marked dspu::Sample::getBuffer as deprecated, use dspu::Sample::channel instead.
* Added dspu::Sample::remove method to remove part of sample data.
* Updated module versions in dependencies.

=== 1.0.9 ===
* Changed visibility of the dspu::InSampleStream class to public.
* Added dspu::Filter::limit method for limiting frequency parameters of the filter.
* Added dspu::Equalizer::limit_params mehod for limiting frequency parameters of
  the corresponding filter.
* Implemented smooth mode for the FIR/IIR type of equalizer which performs the
  cross-fade on the change of filter characteristics.
* Implemented functions for converting the frequency to a note.
* Added possiblity to load sample built-in into SFZ file format.
* Added test build for Windows using MSYS2.
* Raised the resampling precision for the dspu::Sample::resample().
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.8 ===
* Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
* Added set of functions to convert Neper to dB and gain values.
* Bugfixes found by Clang compiler.
* Added Clang build for the CI.

=== 1.0.7 ===
* Added dspu::Analyzer::activity() method to check the analyzer's activity.
* Fixed possible memory leakage in dspu::Sample methods.
* Fixed bug in dspu::fade_in and dspu::fade_out methods that didn't copy data