@@ -4,6 +4,7 @@
 
 === 1.0.12 ===
 * Added support of high-precision oversampling routines to dspu::Oversampler module.
+* Implemented dspu::RingBuffer class for processing the circular ring buffers.
 * Updated build scripts.
 
 === 1.0.11 ===
